--- a/COVID-19.ipynb
+++ b/COVID-19.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "from uk_covid19 import Cov19API\n",
-    "import pandas as pd\n",
-    "import dataframe_image as dfi"
+    "import pandas as pd"
    ]
   },
   {
